  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

* #11991: Unix on Windows: map ERROR_TOO_MANY_LINKS to EMLINK.
  (Nicolás Ojeda Bär)

### Tools:

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)

- #11773: ocamlyacc: Do not allow quoted literals (such as 'a' or "bc")
  in a token name or %type declaration.  Previously such literals were
  accepted by ocamlyacc, but produced malformed OCaml that was rejected
  by the compiler.
  (Demi Marie Obenour)

- #11774: ocamlyacc: fail if there is an I/O error
  (Demi Marie Obenour)

- #10647: Show hints for the "undefined global" error in the toplevel
  (Wiktor Kuchta, review by Gabriel Scherer)

- #11973: Add support for postfixed mingw host triplets
  (Romain Beauxis)

- #11889, #11978: ocamldoc: handle injectivity annotations and wildcards in type
  parameters.
  (Florian Angeletti, report by Wiktor Kuchta, review by Jules Aguillon)

* #11993: install only bytecode executables for the `ocamlmklib`, `ocamlcmt`,
  `ocamlprof`, `ocamlcp`, `ocamloptp`, and `ocamlmktop` tools, but no
  native-code executables.  A tool like `ocamlmklib` for example is now
  installed directly to `$BINDIR/ocamlmklib`; `ocamlmklib.byte` and
  `ocamlmklib.opt` are no longer installed to `$BINDIR`.
  (Xavier Leroy, review by Gabriel Scherer)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.