@@ -213,10 +213,6 @@ META
 /otherlibs/dynlink/dynlink_platform_intf.mli
 /otherlibs/dynlink/byte/dynlink.mli
 /otherlibs/dynlink/native/dynlink.mli
-/otherlibs/dynlink/dynlink_compilerlibs/Makefile
-/otherlibs/dynlink/dynlink_compilerlibs/*.ml
-/otherlibs/dynlink/dynlink_compilerlibs/*.mli
-/otherlibs/dynlink/dynlink_compilerlibs/.depend
 /otherlibs/unix/unix.ml
 
 /parsing/parser.ml
