@@ -275,6 +275,9 @@ Working version
 * #11991: Unix on Windows: map ERROR_TOO_MANY_LINKS to EMLINK.
   (Nicolás Ojeda Bär)
 
+- #11996: release the dependency of dynlink on compilerlibs.
+  (Sébastien Hinderer, review by ?)
+
 ### Tools:
 
 - #1172: fix ocamlyacc's handling of raw string literals
